Add bootstrap support without Flask-Bootstrap as it uses outdated Bootstrap 3. Allows to use grid. Add draft of how to have interactive plotly graphs

--- a/environment.yml
+++ b/environment.yml
@@ -9,8 +9,7 @@ dependencies:
   - flask-sqlalchemy
   - flask-wtf
   - flask-migrate
+  - plotly
+  - numpy
   - pytest
   - pytest-flask
-  - pip
-  - pip:
-    - flask-bootstrap
